[gd_scene load_steps=12 format=3 uid="uid://bvlrmt68228f"]

[ext_resource type="Script" uid="uid://fe3i72axwq3l" path="res://source/chest/scripts/chest.gd" id="1_48ulj"]
[ext_resource type="SpriteFrames" uid="uid://bm7osxl10jy5a" path="res://source/chest/resources/chest_animation_data.tres" id="1_dy6hu"]
[ext_resource type="Script" uid="uid://ca77eyujwn8yk" path="res://source/chest/scripts/states/chest_state_machine.gd" id="2_3mq8i"]
[ext_resource type="Shape2D" uid="uid://crgh4nga4y7dj" path="res://source/chest/resources/chest_interaction_area.tres" id="2_48ulj"]
[ext_resource type="Resource" uid="uid://bq600h675o2i4" path="res://source/chest/resources/chest_animation_name_data.tres" id="2_cjjk1"]
[ext_resource type="Script" uid="uid://dvkhh15gfaonw" path="res://source/chest/scripts/states/chest_close_state.gd" id="3_nyo4k"]
[ext_resource type="Script" uid="uid://cb5q3vx58cnj" path="res://source/chest/scripts/states/chest_open_state.gd" id="4_mgjww"]
[ext_resource type="Script" uid="uid://dcc3kjokn64wr" path="res://source/chest/scripts/chest_animated_sprite.gd" id="6_luvah"]
[ext_resource type="Script" uid="uid://dp6ygnv6bxt7s" path="res://source/shared/player_input/scripts/player_input.gd" id="7_mgjww"]
[ext_resource type="PackedScene" uid="uid://kvelexcshhn5" path="res://source/interaction_marker/scenes/InteractionMarker.tscn" id="10_shpfg"]
[ext_resource type="Script" uid="uid://wmwebcb1i3je" path="res://source/chest/scripts/chest_save_component.gd" id="11_85e77"]

[node name="Chest" type="Area2D"]
collision_layer = 0
collision_mask = 2
monitorable = false
script = ExtResource("1_48ulj")
animation_name_data = ExtResource("2_cjjk1")

[node name="ChestStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_3mq8i")
initial_state = NodePath("ChestCloseState")
metadata/_custom_type_script = "uid://ca77eyujwn8yk"

[node name="ChestCloseState" type="Node" parent="ChestStateMachine"]
script = ExtResource("3_nyo4k")
metadata/_custom_type_script = "uid://dvkhh15gfaonw"

[node name="ChestOpenState" type="Node" parent="ChestStateMachine"]
script = ExtResource("4_mgjww")
metadata/_custom_type_script = "uid://cb5q3vx58cnj"

[node name="ChestAnimatedSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = ExtResource("1_dy6hu")
animation = &"open"
script = ExtResource("6_luvah")

[node name="ChestInteractionCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -16)
shape = ExtResource("2_48ulj")

[node name="PlayerInput" type="Node" parent="."]
script = ExtResource("7_mgjww")
input_enabled = false
metadata/_custom_type_script = "uid://dp6ygnv6bxt7s"

[node name="InteractionMarker" parent="." instance=ExtResource("10_shpfg")]
position = Vector2(0, -32)

[node name="ChestSaveComponent" type="Node" parent="."]
script = ExtResource("11_85e77")
metadata/_custom_type_script = "uid://wmwebcb1i3je"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="play_animation" from="." to="ChestAnimatedSprite" method="_on_chest_play_animation"]
[connection signal="set_enable_input" from="." to="PlayerInput" method="set_input_enabled"]
[connection signal="set_interaction_marker_active" from="." to="InteractionMarker" method="set_active"]
[connection signal="set_interaction_marker_inactive" from="." to="InteractionMarker" method="set_inactive"]
